--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
     <link rel="stylesheet" href="style.css"/>
     <title>CARAVAN</title>
   </head>
-  
+
   <body>
-    
+    <div class="header">
+      <div class="header-top"></div>
+      <div class="header-bottom"></div>
+    </div>
+    <div class="main-visual">
+      <div class="main-visual-content"></div>
+    </div>
+    <div class="main">
+      <div class="blog"></div>
+      <div class="sidebar"></div>
+    </div>
+    <div class="footer"></div>
   </body>
 </html>
