--- a/index.html
+++ b/index.html
@@ -24,7 +24,16 @@
       </ul>
     </nav>
     <div class="main-visual">
-      <div class="main-visual-content"></div>
+      <div class="main-visual-content">
+        <p class="main-visual-text">
+           The world is a book <br/>
+           and those who do not travel <br/>
+           read only one page.
+        </p>
+        <p class="main-visual-name">
+            St. Augustine
+        </p>
+      </div>
     </div>
     <div class="main">
       <div class="blog"></div>
