--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8"/>
+    <script src="https://kit.fontawesome.com/78e7af28c8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css"/>
     <title>CARAVAN</title>
   </head>
@@ -13,6 +14,11 @@
           CARAVAN
         </a>
       </h1>
+      <div class="social">
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-twitter-square"></i>
+        <i class="fab fa-instagram"></i>
+      </div>
     </header>
     <nav>
       <ul class="nav-list">
